suuport stitching in compute request
